--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background: #f8fafc;
+        }
         .comparison-container {
             position: relative;
             width: 100%;
             height: 600px;
             overflow: hidden;
-            border: 2px solid #e5e7eb;
-            border-radius: 8px;
+            border: 1px solid #e2e8f0;
+            border-radius: 12px;
+            background: #fff;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
         }
         .overlay-image {
             position: absolute;
@@ -24,15 +31,54 @@
             pointer-events: none;
         }
         .control-panel {
-            padding: 1rem;
             background: white;
+            border-radius: 12px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+            border: 1px solid #e2e8f0;
+            margin-bottom: 1.5rem;
+        }
+        .slider-thumb {
+            -webkit-appearance: none;
+            width: 100%;
+            height: 6px;
+            border-radius: 3px;
+            background: #e2e8f0;
+            outline: none;
+        }
+        .slider-thumb::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 18px;
+            height: 18px;
+            border-radius: 50%;
+            background: #3b82f6;
+            cursor: pointer;
+            border: 2px solid #fff;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+        }
+        .instruction-card {
+            background: #f8fafc;
+            border: 1px solid #e2e8f0;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 1rem;
             margin-bottom: 1rem;
+        }
+        .step-number {
+            background: #3b82f6;
+            color: white;
+            width: 24px;
+            height: 24px;
+            border-radius: 12px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 0.5rem;
+            font-size: 0.875rem;
+            font-weight: 600;
         }
     </style>
 </head>
-<body class="bg-gray-100 p-4">
+<body class="p-4 md:p-6 lg:p-8">
     <div id="root"></div>
     <script type="text/babel">
         const DesignQATool = () => {
@@ -42,6 +88,7 @@
             const [scale, setScale] = React.useState(1);
             const [position, setPosition] = React.useState({ x: 0, y: 0 });
             const [isDragging, setIsDragging] = React.useState(false);
+            const [showInstructions, setShowInstructions] = React.useState(true);
 
             const handleImageUpload = (event, type) => {
                 const file = event.target.files[0];
@@ -76,14 +123,50 @@
             };
 
             return (
-                <div className="max-w-4xl mx-auto">
-                    <div className="bg-white p-6 rounded-lg shadow-lg">
-                        <h1 className="text-2xl font-bold mb-6">Design QA Tool</h1>
+                <div className="max-w-5xl mx-auto">
+                    <div className="bg-white p-8 rounded-xl shadow-lg border border-gray-200">
+                        <div className="flex justify-between items-center mb-8">
+                            <h1 className="text-3xl font-bold text-gray-900">Design QA Tool</h1>
+                            <button 
+                                onClick={() => setShowInstructions(!showInstructions)}
+                                className="text-sm px-4 py-2 rounded-lg bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors"
+                            >
+                                {showInstructions ? 'Hide Instructions' : 'Show Instructions'}
+                            </button>
+                        </div>
+
+                        {showInstructions && (
+                            <div className="mb-8 space-y-4">
+                                <div className="instruction-card">
+                                    <h3 className="font-semibold mb-2 flex items-center">
+                                        <span className="step-number">1</span>
+                                        Taking Screenshots
+                                    </h3>
+                                    <div className="ml-8 space-y-2 text-gray-600">
+                                        <p><strong>For Figma:</strong> Select your frame, press Command+Shift+C (Mac) or Ctrl+Shift+C (Windows) to copy as PNG.</p>
+                                        <p><strong>For Development:</strong> Ensure your browser window matches the Figma frame width (usually 1440px for desktop). Press Command+Shift+4 (Mac) or Windows+Shift+S (Windows) to capture the specific area.</p>
+                                    </div>
+                                </div>
+                                <div className="instruction-card">
+                                    <h3 className="font-semibold mb-2 flex items-center">
+                                        <span className="step-number">2</span>
+                                        Browser Setup for Development Screenshots
+                                    </h3>
+                                    <div className="ml-8 space-y-2 text-gray-600">
+                                        <p>1. Open Chrome Developer Tools (F12)</p>
+                                        <p>2. Click the Device Toggle Toolbar (Ctrl+Shift+M)</p>
+                                        <p>3. Set width to match Figma frame (e.g., 1440px)</p>
+                                        <p>4. Set zoom to 100% (Command/Ctrl + 0)</p>
+                                        <p>5. Take screenshot of the specific component</p>
+                                    </div>
+                                </div>
+                            </div>
+                        )}
                         
-                        <div className="control-panel">
-                            <div className="grid grid-cols-2 gap-4 mb-4">
+                        <div className="control-panel p-6">
+                            <div className="grid md:grid-cols-2 gap-6 mb-6">
                                 <div>
-                                    <label className="block mb-2">Figma Screenshot</label>
+                                    <label className="block mb-2 font-medium text-gray-700">Figma Screenshot</label>
                                     <input 
                                         type="file" 
                                         accept="image/*"
@@ -92,7 +175,7 @@
                                     />
                                 </div>
                                 <div>
-                                    <label className="block mb-2">Development Screenshot</label>
+                                    <label className="block mb-2 font-medium text-gray-700">Development Screenshot</label>
                                     <input 
                                         type="file" 
                                         accept="image/*"
@@ -102,9 +185,9 @@
                                 </div>
                             </div>
                             
-                            <div className="flex items-center gap-4 mb-4">
+                            <div className="grid md:grid-cols-2 gap-6">
                                 <div>
-                                    <label className="block mb-2">Opacity</label>
+                                    <label className="block mb-2 font-medium text-gray-700">Overlay Opacity</label>
                                     <input 
                                         type="range"
                                         min="0"
@@ -112,11 +195,11 @@
                                         step="0.1"
                                         value={opacity}
                                         onChange={(e) => setOpacity(e.target.value)}
-                                        className="w-full"
+                                        className="slider-thumb w-full"
                                     />
                                 </div>
                                 <div>
-                                    <label className="block mb-2">Zoom</label>
+                                    <label className="block mb-2 font-medium text-gray-700">Zoom Level</label>
                                     <input 
                                         type="range"
                                         min="0.5"
@@ -124,7 +207,7 @@
                                         step="0.1"
                                         value={scale}
                                         onChange={(e) => setScale(e.target.value)}
-                                        className="w-full"
+                                        className="slider-thumb w-full"
                                     />
                                 </div>
                             </div>
@@ -159,7 +242,10 @@
                             )}
                             {!figmaImage && !devImage && (
                                 <div className="flex items-center justify-center h-full text-gray-500">
-                                    Upload both images to start comparison
+                                    <div className="text-center">
+                                        <p className="mb-2 text-lg font-medium">No Images Uploaded</p>
+                                        <p className="text-sm text-gray-400">Upload both Figma and development screenshots to start comparison</p>
+                                    </div>
                                 </div>
                             )}
                         </div>
